elk/elastic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: elastic-deployment
spec:
   replicas: 1
   selector:
      matchLabels:
         component: elasticsearch
   template:
      metadata:
          labels:
              component: elasticsearch
      spec:
         volumes:
            - name: data
              persistentVolumeClaim:
                 claimName: elasticsearch-data
         containers:
            - name: elasticsearch
              image: docker.elastic.co/elasticsearch/elasticsearch:6.5.4
              ports:
                 - containerPort: 9200
                 - containerPort: 9300
              volumeMounts:
                 - name: data
                   mountPath: /usr/share/elasticsearch/data
                   subPath: es-data
