elk/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: kibana-deployment
spec:
   replicas: 1
   selector:
      matchLabels:
         component: kibana
   template:
      metadata:
          labels:
              component: kibana
      spec:
         containers:
            - name: kibana
              image: docker.elastic.co/kibana/kibana:6.5.4
              ports:
                 - containerPort: 5601
